styles.css
img {
    height: 6rem;
    width: 6rem;
    image-rendering: crisp-edges;
}

body {
    text-align: center;
    background-color: #2d2e30;
    color: white;
}

.offcanvas {
    background-color: #1d1e20;
    display: flex;
    overflow-y: scroll;
    overflow-x: hidden;
}

.offcanvas>img, .offcanvas>span {
    position: relative;
    left: 50%;
    transform: translateX(-50%);
    color: white;
}

.offcanvas>* {
    color: white;
}

.offcanvas>span {
    margin-bottom: 20px;
}

.sill {
    filter: contrast(0)
}

.offcanvas>img {
    border: solid 4px white;
    padding: 5px;
}

@keyframes pop {
    0% {
        transform: scale(1.5)
    }
    100% {
        transform: scale(1)
    }
}

.pop {
    animation-name: pop;
    animation-iteration-count: 1;
    animation-duration: 0.5s;
    animation-timing-function: ease-out;
}

#collectContainer {
    margin-top: 50px;
    margin-bottom: 50px;
    background-color: #0d0e10;
    padding: 10px;
}

.btn-close {
    position: absolute;
    font-size: 30px;
}

.btn-close:hover {
    color: white;
}

.btn-close:focus, .btn-close:active {
    outline: none !important;
    box-shadow: none;
}

